# daily_stock_analysis_v1.3

./: .dockerignore  .env  .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  DIAGNOSTIC_SYSTEM_VERIFICATION.md  INTEGRATION_SUMMARY.md  MERGED_REPORT_GUIDE.md  New Plans.md  PLAYBOOK.md  README.md  SKILL.md  TASK_2.1.4_IMPLEMENTATION_SUMMARY.md  TASK_2.1.5_IMPLEMENTATION_SUMMARY.md  TASK_6.2_IMPLEMENTATION_SUMMARY.md  TASK_6.3_IMPLEMENTATION_SUMMARY.md  analyzer_service.py  debug_env.py  execution_trace_acceptance.csv  index.html  litellm_config.example.yaml  litellm_config.yaml  main.py  market_report_20260426.md  merged_report_demo.md  package-lock.json  package.json  pyproject.toml  railway.toml  requirements-ci.txt  requirements-dev.txt  requirements.txt  restart.sh  review.md  run_all_backtest_scenarios.py  run_wolfystock_p3.py  server.py  setup.cfg  (+10 more)
.beads/: config.yaml  issues.jsonl
.docs/: README.md  api-contracts.md  database-schema.md  project-start-plan.md  security-and-rate-limits.md  startup-checklist.md  testing-strategy.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  prt_exfil.py
api/: __init__.py  app.py  deps.py
backtest_outputs/: B_cash_insufficient.csv  B_cash_insufficient.json  E_old_run_fallback.csv  E_old_run_fallback.json  execution-trace-acceptance.csv  execution-trace-acceptance.json
bot/: __init__.py  dispatcher.py  handler.py  models.py
data_provider/: __init__.py  akshare_fetcher.py  alpaca_fetcher.py  alphavantage_fetcher.py  alphavantage_provider.py  baostock_fetcher.py  base.py  ccxt_crypto_fetcher.py  crypto_context_fetcher.py  crypto_launch_fetcher.py  efinance_fetcher.py  fundamental_adapter.py  futures_fetcher.py  iwencai_market_query_fetcher.py  kr_market.py  longbridge_fetcher.py  provider_credentials.py  pytdx_fetcher.py  qveris_fetcher.py  realtime_types.py  tickflow_fetcher.py  tushare_fetcher.py  twelve_data_fetcher.py  twelvedata_fetcher.py  twse_fetcher.py  us_fundamentals_provider.py  us_index_mapping.py  yfinance_fetcher.py  yfinance_fundamental_adapter.py  zhitu_fetcher.py
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
docs/: AI-AGENT.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING_EN.md  CONTRIBUTING_JA.md  DEPLOY.md  DEPLOY_EN.md  ENGLISH_LOCAL_HANDOFF.md  FAQ.md  FAQ_EN.md  FAQ_JA.md  INDEX.md  INDEX_EN.md  LLM_CONFIG_GUIDE.md  LLM_CONFIG_GUIDE_EN.md  README_CHT.md  README_EN.md  README_JA.md  TUSHARE_STOCK_LIST_GUIDE.md  akshare_breadth_interfaces.md  alerts.md  alphasift-integration.md  analysis-context-pack.md  backtest-system.md  backtest-system_EN.md  beginner-client-setup.md  bot-command.md  bot-command_EN.md  bot-command_JA.md  crypto-scanner.md  deploy-webui-cloud.md  desktop-package.md  extensions.md  full-guide.md  full-guide_EN.md  image-extract-prompt.md  llm-providers.md  market-scanner.md  market-scanner_EN.md  market-support.md  (+10 more)
examples/: bozi_integration_example.py  capital_features_example.py
myenv/: pyvenv.cfg
repo_trash/: fix_parquet_dates.py  one_click_run.py  run_all_fixed.py
scripts/: __init__.py  auto_trace_check.py  backtest_smoke_support.py  benchmark_portfolio_snapshot.py  build-all-macos.sh  build-backend-macos.sh  build-backend.ps1  build-desktop-macos.sh  build-desktop.ps1  check_ai_assets.py  check_env.py  check_language_artifacts.py  check_static_assets.py  ci_gate.sh  cleanup_comments.py  e2e_test_feishu_app.py  fetch_tushare_stock_list.py  (+18 more)
stock-workflow/: .gitignore  analyze_000063.py  analyze_002049.py  config.yaml  daily_run.py  data_source.py  live_screen.py  main.py  monitor_continuous.py  pyproject.toml
stock-workflow/.github/workflows/: monitor.yml
stock-workflow/notify/: pusher.py
stock-workflow/rules/: adaptive_position.py  chan_theory_signals.py  multi_timeframe.py  risk_controls.py
stock-workflow/steps/: __init__.py  analyzer.py  backtest.py  monitor.py  planner.py  review.py  screener.py  simulator.py  step0_market_check.py  step5_indicators.py  trading_calendar.py
(+4192 files in other folders)
