[tool.poetry]
name = "daily-stock-analysis"
version = "0.1.0"
description = "A股自选股智能分析系统"
authors = ["liming <your_email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^1.0.0"
tenacity = "^8.2.0"
sqlalchemy = "^2.0.0"
schedule = "^1.2.0"
efinance = "^0.5.5"
akshare = "^1.12.0"
tushare = "^1.4.0"
pytdx = "^1.72"
baostock = "^0.8.0"
yfinance = "^0.2.0"
lark-oapi = "^1.0.0"
pandas = "^2.0.0"
numpy = "^1.24.0"
json-repair = ">=0.25.3"
google-generativeai = "^0.8.0"
anthropic = "^0.18.0"
openai = "^1.0.0"
tavily-python = "^0.3.0"
google-search-results = "^2.4.0"
requests = "^2.31.0"
markdown2 = "^2.4.0"
imgkit = "^1.2.0"
fake-useragent = "^1.4.0"
httpx = {extras = ["socks"], version = "*"}
dingtalk-stream = "^0.24.3"
"discord.py" = "^2.0.0"
newspaper3k = "^0.2.8"
lxml_html_clean = "*"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
python-multipart = "^0.0.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.0.0"
isort = "^5.13.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | venv
    | _build
    | buck-out
    | build
    | dist
    | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 120
skip = [".git", "__pycache__", ".env", "venv", ".venv"]

[tool.bandit]
exclude_dirs = ["tests", "test_*.py"]
skips = ["B101"]
