[project]
name = "daily_stock_analysis"
version = "0.1.0"
description = "A multi-market intelligent stock analysis system for A-shares, HK stocks, and US stocks"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.0",
    "sqlalchemy>=2.0.0",
    "schedule>=1.2.0",
    "exchange-calendars>=4.5.0",
    "efinance>=0.5.5",
    "akshare>=1.12.0",
    "tushare>=1.4.0",
    "pytdx>=1.72",
    "baostock>=0.8.0",
    "yfinance>=0.2.0",
    "tickflow>=0.1.0",
    "lark-oapi>=1.0.0",
    "pandas>=2.0.0",
    "pypinyin>=0.50.0",
    "openpyxl>=3.1.0",
    "numpy>=1.24.0",
    "json-repair>=0.55.1",
    "litellm>=1.80.10",
    "tiktoken>=0.3.0,<0.12.0",
    "openai>=1.0.0",
    "PyYAML>=6.0",
    "tavily-python>=0.3.0",
    "google-search-results>=2.4.0",
    "requests>=2.31.0",
    "markdown2>=2.4.0",
    "imgkit>=1.2.0",
    "fake-useragent>=1.4.0",
    "httpx[socks]",
    "dingtalk-stream>=0.24.3",
    "discord.py>=2.0.0",
    "newspaper3k>=0.2.8",
    "lxml-html-clean",
    "jinja2>=3.1.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
]

[tool.black]
line-length = 120
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | venv
    | _build
    | buck-out
    | build
    | dist
    | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 120
skip = [".git", "__pycache__", ".env", "venv", ".venv"]

[tool.bandit]
exclude_dirs = ["tests", "test_*.py"]
skips = ["B101"]  # assert 语句在测试中是允许的
