[project]
name = "stock-workflow"
version = "1.0.0"
description = "AиӮЎе…ЁжөҒзЁӢиҮӘеҠЁеҢ–дәӨжҳ“зі»з»ҹ вҖ” йҖүиӮЎвҶ’еҲҶжһҗвҶ’и®ЎеҲ’вҶ’зӣ‘жҺ§вҶ’жЁЎжӢҹвҶ’еӣһжөӢвҶ’еӨҚзӣҳ"
requires-python = ">=3.10"
dependencies = [
    "mootdx>=0.10",
    "requests>=2.28",
    "pandas>=2.0",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "stockstats>=0.6",
    "urllib3>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[tool.hatch.build.targets.wheel]
packages = ["./data_source.py", "./main.py", "./steps", "./notify"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
